--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.ipynb linguist-language=Jupyter Notebook
-*.py linguist-language=Python
+titanic-solution.ipynb linguist-language=Jupyter Notebook
+titanic-solution.py linguist-language=Python
